--- a/themes/hugo-curious/layouts/partials/subscriber-form.html
+++ b/themes/hugo-curious/layouts/partials/subscriber-form.html
@@ -3,14 +3,14 @@
         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
         novalidate>
         <div id="mc_embed_signup_scroll">
-            <h2 class="widget-title mt-4">Subscribe for Updates</h2>
-            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <h2 class="widget-title mt-4">Theo dõi trang</h2>
+            <div class="indicates-required"><span class="asterisk">*</span> bắt buộc</div>
             <div class="mc-field-group">
-                <label for="mce-EMAIL">Your email<span style="color:red; display: inline;">*</span></label>
+                <label for="mce-EMAIL">Email của bạn<span style="color:red; display: inline;">*</span></label>
                 <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
             </div>
             <div class="mc-field-group">
-                <label for="mce-FNAME">Your name </label>
+                <label for="mce-FNAME">Tên của bạn </label>
                 <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
             </div>
             <div id="mce-responses" class="clear">
@@ -20,7 +20,7 @@
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                     name="b_c5f9d88238b4c0ec0106fe459_e74e121dc8" tabindex="-1" value=""></div>
             <div class="clear"><button type="submit" name="subscribe" id="mc-embedded-subscribe"
-                    class="button">Subscribe</div>
+                    class="button">Theo dõi</div>
         </div>
     </form>
 </div>
